--- a/LuckyWheelFrontend/src/index.css
+++ b/LuckyWheelFrontend/src/index.css
@@ -72,6 +72,7 @@ button:focus-visible {
   text-align: center;
   margin-top: 50px;
   text-decoration: none;
+  font-size: 8px;
   a{
     color: white;
   }
